2004-01-18  Mike Kestner  <mkestner@ximian.com>

	* generator/SymbolTable.cs : mangle parms named readonly

2004-01-18  Peter Williams  <peter@newton.cx>

	* glib/Marshaller.cs (ArrayPtrToArgv, ArgvToArrayPtr): new
	functions for marshalling and unmarshalling string arrays 
	to/from char **. Not pretty, but lets us call gtk_init()
	in Gtk.

	* gtk/Application.cs (do_init): New helper function to handle
	passing args to Gtk. Uses above functions.
	(Init): Use do_init, take a new progname parameter.
	(InitCheck): Same.

2004-01-18  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : mark TreeSelection.GetSelectedRows return
	list element_type as Gtk.TreePath.
	* gtk/gtk-api.xml : regen

2004-01-18  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : mark TreeSelection.GetSelectedRows model
	param as out.
	* gtk/gtk-api.xml : regen

2004-01-18  John Luke  <jluke@cfl.rr.com>

	* vte/Vte.metadata: fix to generate signals
	* vte/vte-api.xml: regen
	* samples/VteTest.cs: remove my home dir path
	
2004-01-17  John Luke  <jluke@cfl.rr.com>

	* configure.in: detect and compile vte-sharp  (require vte-0.11.10)
	* Makefile.in: add vte to subdirs
	* vte/*:
	* sources/makefile:
	* sources/gtk-sharp-sources.xml: add vte
	* samples/VteTest.cs: add incomplete test/sample
	* samples/Makefile.in: add vte-test.exe target
	
2004-01-15  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* generator/Method.cs: Methods which returns void and has a single out parameter
	  like void Foobar (..., out int baz, ...) are turned into the more .NET like
	  signature int Foobar (...), this fixes bug 46392
	* generator/Signature.cs: Ditto
	* generator/MethodBody.cs: Ditto
	* gtk/ListStore.custom: Ditto
	* gtk/TextBuffer.custom: Ditto
	* gtk/TreeStore.custom: Ditto

2004-01-13  Tambet Ingo  <tambet@ximian.com>

	* gtk-sharp.pc.in : add libdir var
	* generator/SymbolTable.cs : add GByteArray mapping.

2004-01-13  Mike Kestner  <mkestner@ximian.com>
