@@ -1,5 +1,10 @@
 2004-01-18  Mike Kestner  <mkestner@ximian.com>
 
+	* generator/Field.cs : refactored code from StructBase
+	* generator/StructBase.cs : spin off Field class
+
+2004-01-18  Mike Kestner  <mkestner@ximian.com>
+
 	* generator/SymbolTable.cs : mangle parms named readonly
 
 2004-01-18  Peter Williams  <peter@newton.cx>
